<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary"
        android:gravity="bottom|center"
        android:padding="10dp"
        android:text="@string/dialog_title"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="12dp"
        android:id="@+id/dialog_text_container"
        >
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/wrong"
            android:layout_margin="10dp"
            android:id="@+id/dialog_text_checker"
            android:contentDescription="@string/dialog_text_checker" />

        <EditText
            android:id="@+id/dialog_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text"
            android:inputType="text"
            android:padding="8dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="12dp"
        android:id="@+id/dialog_number_container">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/wrong"
            android:layout_margin="10dp"
            android:id="@+id/dialog_number_checker"
            android:contentDescription="@string/dialog_text_checker" />
    <EditText
        android:id="@+id/dialog_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_number"
        android:inputType="numberDecimal"
        android:padding="8dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/about_app"
        android:textSize="15sp"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:padding="8dp">

        <Button
            android:id="@+id/dialog_cancle_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/negative_btn"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/dialog_okay_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/positive_btn"
            android:padding="8dp"
            android:text="@string/okay"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>