<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/the_icon"
            android:padding="8dp"
            android:src="@drawable/ward" />

        <EditText
            android:id="@+id/startup_ward_ed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:hint="@string/enter_ward"
            android:inputType="text"
            android:padding="8dp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:id="@+id/startup_ward_right_wrong"
            android:contentDescription="@string/the_icon"
            android:padding="8dp"
            android:src="@drawable/wrong" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/the_icon"
            android:padding="8dp"
            android:src="@drawable/bed" />

        <EditText
            android:id="@+id/startup_bed_ed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:hint="@string/enter_bed"
            android:inputType="numberDecimal"
            android:padding="8dp" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="8dp"
            android:id="@+id/startup_bed_right_wrong"
            android:contentDescription="@string/the_icon"
            android:padding="8dp"
            android:src="@drawable/wrong" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="8dp"
        android:background="@color/fade"
        android:padding="8dp" />

    <Button
        android:id="@+id/startup_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/go_btn"
        android:padding="8dp"
        android:text="@string/next"
        android:textSize="20sp"
        android:typeface="serif" />

</LinearLayout>